// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App/> tree <Badge/> component render component 1`] = `
<div>
  <li
    class="uk-active"
  >
    <a
      href="/"
      uk-switcher-item=""
    >
      USERS
    </a>
  </li>
</div>
`;

exports[`<App/> tree <Header/> component render component with session 1`] = `
<div>
  <div
    uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky"
  >
    <nav
      class="sc-jSgupP coTTAM uk-navbar uk-navbar-container uk-margin"
    >
      <div
        class="uk-navbar-left"
      >
        <a
          class="uk-navbar-item uk-logo"
          href="/"
        >
          <span
            class="sc-dIUggk jYdzTb"
          >
            Wlog
          </span>
        </a>
      </div>
      <div
        class="uk-navbar-right"
      >
        <ul
          class="uk-navbar-nav"
        >
          <li
            class="uk-visible"
          >
            <div
              class="mid"
            >
              <label
                class="rocker rocker-small"
              >
                <input
                  type="checkbox"
                />
                <span
                  class="switch-left"
                >
                  🌚
                </span>
                <span
                  class="switch-right"
                >
                  🌞
                </span>
              </label>
            </div>
          </li>
          <li
            class="uk-visible@s"
          >
            <a
              href="/user/RealUser1"
            >
              <span
                class="sc-dIUggk jYdzTb"
              >
                REALUSER1
              </span>
            </a>
          </li>
          <li
            class="uk-hidden@s"
          >
            <a
              href="/user/RealUser1"
              uk-icon="icon:user; ratio:1.3"
            />
          </li>
        </ul>
      </div>
      <div
        class="uk-navbar-center"
      >
        <a
          class="uk-navbar-toggle"
          href="/create"
        >
          <span
            class="white"
            uk-icon="icon:plus-circle"
          />
        </a>
      </div>
    </nav>
  </div>
</div>
`;

exports[`<App/> tree <Header/> component render component without session 1`] = `
<div>
  <div
    uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky"
  >
    <nav
      class="sc-jSgupP coTTAM uk-navbar uk-navbar-container uk-margin"
    >
      <div
        class="uk-navbar-left"
      >
        <a
          class="uk-navbar-item uk-logo"
          href="/"
        >
          <span
            class="sc-dIUggk jYdzTb"
          >
            Wlog
          </span>
        </a>
      </div>
      <div
        class="uk-navbar-right"
      >
        <ul
          class="uk-navbar-nav"
        >
          <li
            class="uk-visible"
          >
            <div
              class="mid"
            >
              <label
                class="rocker rocker-small"
              >
                <input
                  type="checkbox"
                />
                <span
                  class="switch-left"
                >
                  🌚
                </span>
                <span
                  class="switch-right"
                >
                  🌞
                </span>
              </label>
            </div>
          </li>
          <li
            class="uk-visible@s"
          >
            <a
              class=""
              href="/sign"
            >
              <span
                class="sc-dIUggk jYdzTb"
              >
                Log in
              </span>
            </a>
          </li>
          <li
            class="uk-hidden@s"
          >
            <span
              class="sc-dIUggk jYdzTb"
            >
               
              <a
                href="/sign"
                uk-icon="icon:user; ratio:1.3"
              />
            </span>
          </li>
        </ul>
      </div>
      <div
        class="uk-navbar-center"
      />
    </nav>
  </div>
</div>
`;

exports[`<App/> tree <Users/> component render component 1`] = `
<div>
  <div
    class="uk-padding-small "
  >
    <div
      aria-level="1"
      class="sc-fbkhIv bpQMSF rdt_TableHeader"
      role="heading"
    >
      <div
        class="sc-GqfZa igCJGE"
      />
      <div
        class="sc-fWSCIC ghmvHB"
      />
      <div
        class="sc-clsHhM gGucWr"
      >
        <div
          class="sc-lcujXC ibKAgw"
        />
        <div
          class="sc-gGmIRh eRLeSF"
        />
      </div>
    </div>
    <div
      class="sc-jHVexB gqcHtM uk-table"
    >
      <div
        class="sc-jONnTn eTEemt"
      >
        <div
          class="sc-dOSReg jUYLjC rdt_Table"
          role="table"
        >
          <div
            class="sc-bBrOnJ fzRzna rdt_TableHead"
            role="rowgroup"
          >
            <div
              class="sc-cOajty LfdCX rdt_TableHeadRow"
              role="row"
            >
              <div
                class="sc-AzgDb sc-khAkjo sc-nFpLZ gWDQZb hArNmc bkofXK rdt_TableCol"
              >
                <div
                  class="sc-higXBA ifJUIw rdt_TableCol_Sortable"
                  id="column-role"
                  role="columnheader"
                  tabindex="0"
                >
                  <div>
                    Role
                  </div>
                  <span
                    class="sc-eJMQSu eYcAiT"
                  >
                    ▲
                  </span>
                </div>
              </div>
              <div
                class="sc-AzgDb sc-khAkjo sc-nFpLZ gWDQZb bCsXKp bkofXK rdt_TableCol"
              >
                <div
                  class="sc-higXBA ifJUIw rdt_TableCol_Sortable"
                  id="column-name"
                  role="columnheader"
                  tabindex="0"
                >
                  <div>
                    Full name
                  </div>
                  <span
                    class="sc-eJMQSu eYcAiT"
                  >
                    ▲
                  </span>
                </div>
              </div>
              <div
                class="sc-AzgDb sc-khAkjo sc-nFpLZ gWDQZb hArNmc bkofXK rdt_TableCol"
              >
                <div
                  class="sc-higXBA ifJUIw rdt_TableCol_Sortable"
                  id="column-username"
                  role="columnheader"
                  tabindex="0"
                >
                  <div>
                    Username
                  </div>
                  <span
                    class="sc-eJMQSu eYcAiT"
                  >
                    ▲
                  </span>
                </div>
              </div>
              <div
                class="sc-AzgDb sc-khAkjo sc-nFpLZ gWDQZb cYFwxJ bkofXK rdt_TableCol"
              >
                <div
                  class="sc-higXBA ifJUIw rdt_TableCol_Sortable"
                  id="column-datelog"
                  role="columnheader"
                  tabindex="0"
                >
                  <div>
                    Date log
                  </div>
                  <span
                    class="sc-eJMQSu eYcAiT"
                  >
                    ▲
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-TmcTc gAWXld rdt_TableBody"
            offset="250px"
            role="rowgroup"
          >
            <div
              class="sc-jeGSBP clkYt rdt_TableRow"
              id="row-0"
              role="row"
            >
              <div
                class="sc-AzgDb sc-khAkjo sc-hTZhsR eJtVEU hArNmc kdfvpx rdt_TableCell"
                data-tag="allowRowEvents"
                id="cell-T4uka3q5I9-undefined"
                role="gridcell"
              >
                <select
                  class="sc-hBEYos hpuswe  uk-text-bold"
                >
                  <option
                    class="sc-fodVxV hLbVFz"
                    value="ADMIN"
                  >
                    ADMIN
                  </option>
                  <option
                    class="sc-fodVxV hLbVFz"
                    value="REDACTOR"
                  >
                    REDACTOR
                  </option>
                  <option
                    class="sc-fodVxV hLbVFz"
                    value="MODERADOR"
                  >
                    MODERADOR
                  </option>
                  <option
                    class="sc-fodVxV hLbVFz"
                    value="LECTOR"
                  >
                    LECTOR
                  </option>
                </select>
              </div>
              <div
                class="sc-AzgDb sc-khAkjo sc-hTZhsR eJtVEU bCsXKp kdfvpx rdt_TableCell"
                data-tag="allowRowEvents"
                id="cell-I3XOURMIAX-undefined"
                role="gridcell"
              >
                <div
                  class="uk-flex uk-flex-middle uk-flex-center"
                >
                  <p
                    class="uk-text-bold"
                  >
                    Jorge Rojas
                  </p>
                </div>
              </div>
              <div
                class="sc-AzgDb sc-khAkjo sc-hTZhsR eJtVEU hArNmc kdfvpx rdt_TableCell"
                data-tag="allowRowEvents"
                id="cell-h8El_66VRB-undefined"
                role="gridcell"
              >
                <p
                  class="uk-text-bold"
                >
                  ...
                </p>
              </div>
              <div
                class="sc-AzgDb sc-khAkjo sc-hTZhsR eJtVEU cYFwxJ kdfvpx rdt_TableCell"
                data-tag="allowRowEvents"
                id="cell-pefpmaTG30-undefined"
                role="gridcell"
              >
                <p
                  class="uk-text-bold"
                />
              </div>
            </div>
            <div
              class="sc-jeGSBP clkYt rdt_TableRow"
              id="row-1"
              role="row"
            >
              <div
                class="sc-AzgDb sc-khAkjo sc-hTZhsR eJtVEU hArNmc kdfvpx rdt_TableCell"
                data-tag="allowRowEvents"
                id="cell-T4uka3q5I9-undefined"
                role="gridcell"
              >
                <select
                  class="sc-hBEYos hpuswe  uk-text-bold"
                >
                  <option
                    class="sc-fodVxV hLbVFz"
                    value="ADMIN"
                  >
                    ADMIN
                  </option>
                  <option
                    class="sc-fodVxV hLbVFz"
                    value="REDACTOR"
                  >
                    REDACTOR
                  </option>
                  <option
                    class="sc-fodVxV hLbVFz"
                    value="MODERADOR"
                  >
                    MODERADOR
                  </option>
                  <option
                    class="sc-fodVxV hLbVFz"
                    value="LECTOR"
                  >
                    LECTOR
                  </option>
                </select>
              </div>
              <div
                class="sc-AzgDb sc-khAkjo sc-hTZhsR eJtVEU bCsXKp kdfvpx rdt_TableCell"
                data-tag="allowRowEvents"
                id="cell-I3XOURMIAX-undefined"
                role="gridcell"
              >
                <div
                  class="uk-flex uk-flex-middle uk-flex-center"
                >
                  <p
                    class="uk-text-bold"
                  >
                    Mamberroi One
                  </p>
                </div>
              </div>
              <div
                class="sc-AzgDb sc-khAkjo sc-hTZhsR eJtVEU hArNmc kdfvpx rdt_TableCell"
                data-tag="allowRowEvents"
                id="cell-h8El_66VRB-undefined"
                role="gridcell"
              >
                <p
                  class="uk-text-bold"
                >
                  ...
                </p>
              </div>
              <div
                class="sc-AzgDb sc-khAkjo sc-hTZhsR eJtVEU cYFwxJ kdfvpx rdt_TableCell"
                data-tag="allowRowEvents"
                id="cell-pefpmaTG30-undefined"
                role="gridcell"
              >
                <p
                  class="uk-text-bold"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <nav
        class="sc-hOqqkJ kbHNVN rdt_Pagination"
      >
        <span
          class="sc-jUEnpm sc-fvhGYg irqXGD ivkOxG"
        >
          Filas por página:
        </span>
        <div
          class="sc-kIeTtH jvmaBY"
        >
          <select
            aria-label="Filas por página:"
            class="sc-bTvRPi bfTjLl"
          >
            <option
              selected=""
              value="10"
            >
              10
            </option>
            <option
              value="15"
            >
              15
            </option>
            <option
              value="20"
            >
              20
            </option>
            <option
              value="25"
            >
              25
            </option>
            <option
              value="30"
            >
              30
            </option>
          </select>
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </div>
        <span
          class="sc-jUEnpm sc-jQbIHB irqXGD eepNGv"
        >
          1-2 de 2
        </span>
        <div
          class="sc-dacFzL DgoVI"
        >
          <button
            aria-disabled="true"
            aria-label="First Page"
            class="sc-dtwoBo kNdnks"
            disabled=""
            id="pagination-first-page"
            type="button"
          >
            <svg
              aria-hidden="true"
              height="24"
              role="presentation"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.41 16.59L13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
              />
              <path
                d="M24 24H0V0h24v24z"
                fill="none"
              />
            </svg>
          </button>
          <button
            aria-disabled="true"
            aria-label="Previous Page"
            class="sc-dtwoBo kNdnks"
            disabled=""
            id="pagination-previous-page"
            type="button"
          >
            <svg
              aria-hidden="true"
              height="24"
              role="presentation"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </button>
          <button
            aria-disabled="true"
            aria-label="Next Page"
            class="sc-dtwoBo kNdnks"
            disabled=""
            id="pagination-next-page"
            type="button"
          >
            <svg
              aria-hidden="true"
              height="24"
              role="presentation"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </button>
          <button
            aria-disabled="true"
            aria-label="Last Page"
            class="sc-dtwoBo kNdnks"
            disabled=""
            id="pagination-last-page"
            type="button"
          >
            <svg
              aria-hidden="true"
              height="24"
              role="presentation"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.59 7.41L10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
              />
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
            </svg>
          </button>
        </div>
      </nav>
    </div>
  </div>
</div>
`;
